...
            android:id="@+id/action_introFragment_to_accountFragment"
            app:destination="@id/accountFragment"
            app:enterAnim="@anim/from_bottom"
            app:popUpTo="@id/introFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.ecommerce_app.fragments.auth.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:popUpTo="@id/accountFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.ecommerce_app.fragments.auth.RegisterFragment"
        android:label="RegisterFragment" >
...
